--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,7 +26,7 @@ pipeline {
              checkout([$class: 'GitSCM', 
              branches: [[name: '*/main']], 
              extensions: [], 
-             userRemoteConfigs: [[credentialsId: "${git_creds}", url: "${admin_repo}"]]]) 
+             userRemoteConfigs: [[url: "${admin_repo}"]]]) 
              
             }
         }
