--- a/JenkinsFile
+++ b/JenkinsFile
@@ -48,6 +48,7 @@ pipeline {
                 sh("cat ${WORKSPACE}/committed_files.txt")
                 
                 sh('''
+                !#/bin/bash
                 set +x     
                 echo "" > snow_sql_output.log
                 echo "" > status
@@ -57,7 +58,7 @@ pipeline {
                 
                 while read -r file
                 do
-                  if [ ! -z "$file" ]; then
+                  if [[ ! -z "$file" ]]; then
                    statement_type=`echo "$file" |  cut -d / -f 5`
                    echo "statement_type: ${statement_type}, file: $file"
                    if [ ${statement_type} = "ddl" ]; then
