--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 def env='dev'
 def app_name='snowflake'
 def repo_name='SnowflakeBoT'
-def snowsql_config="/home/ubuntu/.snowsql/config"
+def snowsql_config="/home/cmtuser1/.snowsql/config"
 
 def branch_name='main'
 def code_repo_name='https://github.com/KaveenRaajanV/Snowflake_BoT.git' // SSH Repository of deploy repo //
